# template-native-gui-app

./: .gitmodules  CMakeLists.txt  CMakePresets.json  appinfo.json  template-native-gui-app.cpp  template-native-gui-app.h
src/: lv_conf.h  myapp.c
