# CMakeList.txt : CMake project for template-native-gui-app, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("template-native-gui-app")

# Add source to this project's executable.
add_executable (template-native-gui-app "template-native-gui-app.cpp" "template-native-gui-app.h")

# TODO: Add tests and install targets if needed.
